k8s/typesense/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typesense
  namespace: canister
  labels:
    app: com.tale.canister.typesense
spec:
  selector:
    matchLabels:
      app: com.tale.canister.typesense
  template:
    metadata:
      labels:
        app: com.tale.canister.typesense
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      containers:
      - name: typesense
        image: typesense/typesense:26.0
        ports:
        - containerPort: 8108
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 8108
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          requests:
            memory: 256Mi
            cpu: 256m
          limits:
            memory: 1Gi
            cpu: 1024m
        volumeMounts:
        - name: data
          mountPath: /usr/share/typesense/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: typesense
