k8s/typesense/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense
  namespace: canister
spec:
  selector:
    app: com.tale.canister.typesense
  ports:
  - name: http
    port: 8108
    targetPort: 8108
